--- a/src/scss/_mediaquery.scss
+++ b/src/scss/_mediaquery.scss
@@ -1,17 +1,45 @@
-@media screen and (min-width: 700px){
-    .section-container{
-        padding: 2rem;
-        display: block;
+@media screen and (min-width: 450px){
+    header{
+        flex-direction: row;
     }
-    .show-heading{
-        margin: .5rem 2rem;
+   
+}
+
+@media screen and (min-width: 800px){
+
+    .show-holding-container,
+    .anime-holding-container{
+        width: 98%;
     }
-    .show-img{
-        margin: .5rem 2rem;
-        float: left;
+
+    .popular-show-container,
+    .popular-anime-container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+        padding: 1rem;
+        margin: 1rem;
     }
-    .show-summary{
-        margin: .5rem 2rem;
-        max-width: 60ch;
+
+    .overview{
+        display: grid;
+        grid-template-columns: 1fr,2fr;
+        grid-template-rows: minmax(0,1fr) , 1fr;
+        grid-gap: 1rem;
     }
+
+    .overview-image{
+        grid-row: 1/3;
+        grid-column: 1/2;
+    }
+    .overview-summary{
+        grid-row: 1;
+        grid-column: 2/3;
+        max-width: 50ch;    
+    }
+    .show-details-container{
+        grid-row: 2;
+        grid-column: 2/3;
+    }
+   
 }
