--- a/src/scss/_mediaquery.scss
+++ b/src/scss/_mediaquery.scss
@@ -21,6 +21,10 @@
         margin: 1rem;
     }
 
+    .page2-container{
+        padding-right: 10%;
+    }
+
     .overview{
         display: grid;
         grid-template-columns: 1fr,2fr;
