--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -210,18 +210,20 @@ header{
     background-color: $black;
 }
 
+.header2{
+    margin-bottom: 1rem;
+}
+
 .specific-show-name{
     text-align: center;
     font-size: 1.5rem;
     color: white;
-    margin: 1rem;
 }
 
 // when user click particular show:
 .overview{
     width: 100%;
     height: 100%;
-    padding: 1rem;
     background-color: $black;
 }
 
@@ -231,6 +233,7 @@ header{
     border-radius: 10px;
     object-fit: cover;
     margin: 1rem;
+    margin-top: 1.5rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -239,11 +242,13 @@ header{
 .overview-summary{
     color: rgba(255, 255, 255, 0.829);
     margin: 1rem;
+    margin-top: 2rem;
 }
 
 // extra details container:
 .show-details-container{
     margin: 1rem;
+    margin-top: 2rem;
     background-color: $darkBlue;
     border-radius: 10px;
     padding: 1rem;
